<resources>
    <string name="app_name">Food Fair</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="hint"><font size="10">Password</font></string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="title_activity_fullscreen">FullscreenActivity</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="food_name_title">Food Name:</string>
    <string name="allergen_helper">List of allergens, separated by commas</string>
    <string name="type_title">Type:</string>
    <string name="allergen_title">Allergen:</string>
    <string name="expiry_date_title">Expiry Date:</string>
    <string name="select_date_text">Select Date:</string>
    <string name="quantity_title">Quantity:</string>
    <string name="description_title">Description:</string>
    <string name="description_hint">Write a short description about your food</string>
    <string name="back_to_home">Back to Home</string>

    <string name="menu_user_profile">Profile</string>
    <string name="menu_history_of_items">History of items</string>
    <string name="menu_leaderboards">Leaderboards</string>
    <string name="menu_manage_food_bookings">Manage food bookings</string>
    <string name="menu_view_food_postings">View food postings</string>
    <string name="menu_qr_scanner">Scan QR code</string>
    <string name="menu_settings">Settings</string>
    <string name="menu_sign_out">Sign out</string>

    <string name="config_preferred_meat">CONFIG_PREF_MEAT</string>
    <string name="config_allergies">CONFIG_ALLERGIES</string>
    <string name="config_distance">CONFIG_DISTANCE</string>
    <string name="config_new_food">CONFIG_NEW_FOOD</string>
    <string name="config_item_booked_cancelled">CONFIG_BOOKED_CANCELLED</string>
    <string name="config_new_review">CONFIG_NEW_REVIEW</string>

    <string name="setting_your_account">Your account</string>
    <string name="setting_food_preferences">Food Preferences</string>
    <string name="setting_preferred_meat">Preferred meat</string>
    <string name="setting_allergies">Allergies</string>
    <string name="setting_notifications">Push Notifications</string>
    <string name="setting_new_food">New Nearby Food</string>
    <string name="setting_item_booked_cancelled">Item booked/ cancelled</string>
    <string name="setting_new_review">New Item Review</string>
    <string name="setting_search_distance">Search radius: </string>
    <string name="setting_distance_default"> 3.00 Km</string>
    <string name="setting_reset_password">Reset Password</string>
    <string name="setting_sign_out">Sign Out</string>

    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>

    <!-- Please keep the arrays sorted alphabetically -->
    <array name="setting_meat_preferences">
        <item name="beef">Beef</item>
        <item name="chicken">Chicken</item>
        <item name="pork">Pork</item>
        <item name="seafood">Seafood</item>
        <item name="vegan">Vegan</item>
    </array>

    <!-- Please keep the arrays sorted alphabetically -->
    <array name="setting_allergies">
        <item name="beef">Beef</item>
        <item name="chicken">Chicken</item>
        <item name="peanuts">Peanuts</item>
        <item name="pork">Pork</item>
        <item name="seafood">Seafood</item>
    </array>

    <string name="setting_all">All</string>
    <string name="setting_none">None</string>

    <string name="title_activity_maps">Map</string>
    <string name="title_activity_login">FullscreenActivity</string>
    <string name="title_activity_sign__up">FullscreenActivity</string>
    <string name="title_book_success">Booking confirmed!</string>

    <!--    Firebase account  -->
    <string name="firebase_email">tom@gmail.com</string>
    <string name="firebase_password">Iamtomspassword</string>
    <!--    Firebase keys     -->
    <string name="FIREBASE_COLLECTION_USER_INFO">usersInfo</string>
    <string name="ITEMS_ON_SHELF">itemsOnShelf</string>
    <string name="ITEMS_REVIEWED">itemsReviewed</string>
    <integer name="FIREBASE_COLLECTION_USER_INFO_GENDER_VALUE_MALE">1</integer>
    <string name="FIREBASE_COLLECTION_USER_INFO_KEY_AS_CONSUMER">asConsumer</string>
    <string name="FIREBASE_COLLECTION_USER_INFO_SUB_KEY_OF_AS_CONSUMER_REVIEWS">reviews</string>
    <string name="FIREBASE_COLLECTION_USER_INFO_SUB_KEY_OF_AS_CONSUMER_TRANSACTIONS">transactions</string>
    <string name="FIREBASE_COLLECTION_USER_INFO_SUB_KEY_OF_AS_CONSUMER_BADGES">badges</string>
    <string name="FIREBASE_COLLECTION_USER_INFO_KEY_AS_DONOR">asDonor</string>
    <string name="FIREBASE_COLLECTION_USER_INFO_SUB_KEY_OF_AS_DONOR_BADGES">badges</string>
    <string name="FIREBASE_COLLECTION_USER_INFO_SUB_KEY_OF_AS_DONOR_REVIEWS">itemsReviewed</string>
    <string name="FIREBASE_COLLECTION_USER_INFO_SUB_KEY_OF_AS_DONOR_LAT">lat</string>
    <string name="FIREBASE_COLLECTION_USER_INFO_SUB_KEY_OF_AS_DONOR_LON">lon</string>
    <string name="FIREBASE_COLLECTION_TRANSACTION_INFO">fooditemTransaction</string>

    <string name="FIREBASE_COLLECTION_FOOD_ITEM_INFO">foodItemInfo</string>
    <string name="FIREBASE_COLLECTION_FOOD_ITEM_TRANSACTION">fooditemTransaction</string>
    <string name="FIREBASE_COLLECTION_LEADERBOARD">leaderboard</string>
    <string name="FIREBASE_COLLECTION_REVIEW_INFO">reviewInfo</string>
    <string name="firebase_username">firebase username</string>
    <string name="places">AIzaSyBlDU3a7HGpvApHEfOUVBG39MmxIBBJdrM</string>
    <string name="setting_your_location">Your location:</string>

    <string name="CACHE_KEY_NETWORK_STATUS">NETWORK_STATUS</string>


</resources>