<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.foodfair.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_user_profile"
        android:name="com.foodfair.ui.hamburger.ProfileFragment"
        android:label="@string/menu_user_profile"
        tools:layout="@layout/fragment_profile" />

    <fragment
        android:id="@+id/nav_history_of_items"
        android:name="com.foodfair.ui.hamburger.HistoryFragment"
        android:label="@string/menu_history_of_items"
        tools:layout="@layout/fragment_history" />

    <fragment
        android:id="@+id/nav_leaderboards"
        android:name="com.foodfair.ui.hamburger.LeaderboardFragment"
        android:label="@string/menu_leaderboards"
        tools:layout="@layout/fragment_leaderboard" />

    <fragment
        android:id="@+id/nav_manage_food_postings"
        android:name="com.foodfair.ui.hamburger.ManageFoodFragment"
        android:label="@string/menu_manage_food_postings"
        tools:layout="@layout/fragment_manage_food" />

    <fragment
        android:id="@+id/nav_settings"
        android:name="com.foodfair.ui.hamburger.SettingFragment"
        android:label="@string/menu_settings"
        tools:layout="@layout/fragment_setting" />

<!--    <fragment
        android:id="@+id/nav_sign_out"
        android:name="com.foodfair.ui.slideshow.SlideshowFragment"
        android:label="@string/menu_slideshow"
        tools:layout="@layout/fragment_slideshow" />-->
</navigation>